--- a/src/assets/Pages/Registration/Registration.css
+++ b/src/assets/Pages/Registration/Registration.css
@@ -1,15 +1,44 @@
-.register-heading-container{
+.register-heading-container {
     max-width: 1200px;
     margin: 20px auto;
     padding: 20px;
     background-color: #f9f9f9;
     border-radius: 8px;
     margin-bottom: 20px;
-    margin-top: 110px; /* Increase this value to move the box further down */
+    margin-top: 110px; /* Increased this value to move the box further down */
     padding-left: 60px;
     border-left: 5px solid darkblue;
-}
-
-.reg-bg{
+  }
+  
+  .reg-bg {
     background-color: #d7edf7;
-}
+  }
+  
+  /* Styling for the Three Step Process Section */
+  .three-step-container {
+    max-width: 1200px;
+    margin: 20px auto;
+    padding: 20px;
+    background-color: #f9f9f9;
+    border-radius: 8px;
+    margin-bottom: 20px;
+    padding-left: 60px;
+    border-left: 5px solid darkblue;
+  }
+  .steps-list {
+    list-style-type: none;
+    padding-left: 0;
+  }
+  .highlight-box {
+    display: inline-block;
+    background-color: red; /* Red background */
+    color: white; /* White text */
+    padding: 1px 5px; /* Add some padding around the text */
+    border-radius: 5px; /* Optional: rounded corners */
+    font-weight: bold; /* Optional: bold text */
+  }
+  .steps-list li {
+    margin: 10px 0;
+    font-size: 1.1rem;
+  }
+  
