--- a/src/assets/Navbar/Navbar.css
+++ b/src/assets/Navbar/Navbar.css
@@ -98,6 +98,6 @@ body {
 /* Adjust font size for small screens */
 @media (max-width: 576px) {
   .navbar .navbar-nav .nav-item .nav-link {
-    font-size: 0.6rem; /* Smaller font size for small screens */
+    font-size: 10px; /* Smaller font size for small screens */
   }
 }
