--- a/src/assets/Pages/Home/Home.css
+++ b/src/assets/Pages/Home/Home.css
@@ -147,6 +147,7 @@
   margin: 80px auto; /* Centers the image horizontally */
   max-width: 600px; /* Default maximum width */
   height: auto; /* Maintain aspect ratio */
+  transform: translateX(-10px);
 }
 
 @media (max-width: 767px) {
